Finally fix whitespace issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -610,7 +610,8 @@ span.only-above-sm {
       font-weight: 400;
 
       &:before {
-        content: ": ";
+        content: ":";
+        padding-right: 0.25em;
       }
     }
   }
